--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "Dark++ Theme",
     "description": "An enhanced version of the Visual Studio Code default Dark+ theme.",
     "version": "0.0.1",
-    "publisher": "gbale",
+    "publisher": "bale",
     "engines": {
         "vscode": "^1.5.0"
     },
