--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "theme-darkplusplus",
     "displayName": "Dark++ Theme",
     "description": "An enhanced version of the Visual Studio Code default Dark+ theme.",
-    "version": "0.0.6",
+    "version": "0.0.7",
     "publisher": "bale",
     "engines": {
         "vscode": "^1.66.0"
@@ -25,6 +25,11 @@
                 "label": "Dark++",
                 "uiTheme": "vs-dark",
                 "path": "./src/theme.json"
+            },
+            {
+                "label": "Dark++ V2 (Experimental)",
+                "uiTheme": "vs-dark",
+                "path": "./src/theme_experimental.json"
             }
         ]
     }
