--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "name": "theme-darkplusplus",
-    "displayName": "Dark++ Theme",
-    "description": "An enhanced default Dark+ theme for Visual Studio Code",
+    "displayName": "Dark++",
+    "description": "Enhanced dark themes",
     "version": "0.0.8",
     "publisher": "bale",
+    "license": "MIT",
     "engines": {
         "vscode": "^1.66.0"
     },
