--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "theme-darkplusplus",
-    "displayName": "Dark++",
+    "displayName": "Dark++ Theme",
     "description": "Enhanced dark themes",
     "version": "0.0.9",
     "publisher": "bale",
